
 Note also that the file contains only a fraction of the changes between
 versions 0.430 and 0.50, since Timo Kiviluoto did not update ChangeLog
 during the period between January and September 2004

-----------------------------------------------------------------------------

December 9 2004 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Fixed some minor "problems" reported by Valgrind
  * Thaumic bomb and empty/full dwarven gas grenades added to item.pcx
    by Kahvi
  * Adjusted the InElasticityPenaltyModifiers of broken items upwards
  * BugFix: No message was printed when levitation was activated, except
    if due to a BoL
  * Decreased the possibility of attribute increase and polymorph
    effects of fountains
  * Groups of monsters can appear from a fountain, not just one;
    the amount depends on the species and luck
  * Removed some obsolete commented code

December 03 2004 Heikki Sairanen <first.last@tut.fi>

  * unconscious shopkeepers don't trade

November 17 2004 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Science talks can now require and train charisma
  * Richel Decos has his own unique science talk particles

November 15 2004 Heikki Sairanen <first.last@tut.fi>

  * small typo corrected

November 12 2004 Heikki Sairanen <first.last@tut.fi>

  * the incompatability of old highscore files is handled like it should

November 11 2004 Heikki Sairanen <first.last@tut.fi>

  * old highscore files incompatable

November 11 2004 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * New death messages "beheaded by X" and "killed by X's dirty attack below
    the belt" added
  * Decreased the effect of TALENT_CLEVER; I hadn't taken into account the
    true power of nonorganic limbs when defining it

October 29 2004 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Corrected an annoying bug in DoEvilDeed
  * Every generated monster decreases the approximate monster generation