@@ -33,6 +33,8 @@ int Main(int, char**);
 
 int main(int argc, char* argv[])
 {
+    return Main(argc, argv);
+
   try
   {
     return Main(argc, argv);
