@@ -705,6 +705,7 @@
 #define COLONIST_TEAM 8
 #define TOURIST_GUIDE_TEAM 9
 #define TOURIST_TEAM 10
+#define BETRAYED_TEAM 11
 
 #define NOT_WALKABLE 1
 #define HAS_CHARACTER 2
